# Archon

./: .gitignore  Makefile  README.md  docker-compose.yml  folder_structure.json  go.work  go.work.sum
.github/workflows/: integration-tests.yml
atomic-library/: index.json
deploy/docker/: init.sql
internal/: go.mod  go.sum
internal/kafka/: events.go  producer.go
internal/pb/: manifest.pb.go
internal/pb/proto/: manifest.pb.go
internal/proto/: manifest_grpc.pb.go
proto/: manifest.proto
services/ai-brain/: pyproject.toml  requirements.txt
services/ai-brain/brain/: agent.py
services/ai-brain/brain/graph/: edges.py  graph.py  nodes.py  state.py
services/ai-brain/brain/tools/: atomic_lookup.py  manifest_ops.py
services/ai-brain/cmd/: serve.py
services/ai-brain/grpc_server/: agent.py  server.py  servicer.py
services/ai-brain/proto/: manifest_pb2.py  manifest_pb2_grpc.py
services/ai-brain/proto/proto/: manifest_pb2.py
services/ai-brain/src/: main.py
services/ai-brain/src/grpcserver/: agent.py  server.py  worker.py
services/ai-brain/src/grpcserver/proto/: manifest_pb2.py  manifest_pb2_grpc.py
services/ai-brain/src/proto/: manifest_pb2.py  manifest_pb2_grpc.py
services/ai-brain/tests/: test_graph_nodes.py  test_graph_routing.py  test_grpc_server.py  test_grpc_servicer.py  test_tools.py  test_validators.py
services/ai-brain/tests/integration/: test_grpc_contract.py
services/ai-brain/validators/: manifest_schema.py
services/api-gateway/: go.mod  go.sum  gqlgen.yml  sqlc.yml
services/stitcher/: go.mod  go.sum
(+62 files in other folders)
