[tool.poetry]
name = "archon-ai-brain"
version = "0.1.0"
description = "Reasoning engine for the Archon platform"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "grpc_server" },
    { include = "brain" },
    { include = "proto" },
    { include = "validators" },
    { include = "cmd" },
]

[tool.poetry.dependencies]
python = "^3.11" # Change to your local Python version if different
grpcio = ">=1.64.1"
protobuf = ">=5.26.1"
langchain-google-genai = ">=1.0.3"
langchain-core = ">=0.2.0"
langgraph = ">=0.2.0"
pydantic = ">=2.7.0"
python-dotenv = ">=1.0.1"
redis = ">=5.0.0"
opentelemetry-api = ">=1.24.0"
opentelemetry-sdk = ">=1.24.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.24.0"
opentelemetry-instrumentation-grpc = ">=0.45b0"
kafka-python = ">=2.0.2"

[tool.poetry.group.dev.dependencies]
grpcio-tools = ">=1.64.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]